# OpenGLProject

./: .gitmodules  CMakeLists.txt
TestOpenGL/: CMakeLists.txt  TestOpenGL.cpp  fragment_core.glsl  vertex_core.glsl
TestOpenGL/Header Files/: Camera.h  Game.h  Light.h  Material.h  Mesh.h  Model.h  OBJLoader.h  Primitives.h  Shader.h  TestOpenGL.h  Texture.h  Vertex.h  libs.h
TestOpenGL/OBJ Files/: axe.mtl  bomb.mtl  shield.mtl  sword.mtl
TestOpenGL/Resource Files/: fragment_core.glsl
TestOpenGL/Source Files/: Game.cpp  TestOpenGL.cpp
